# abmove

./: .gitignore  .hgignore  CMakeLists.txt  License.txt  README.md  TODO.txt  abmoveConfig.cmake.in  abmoveConfigVersion.cmake.in  build.bat  configure.bat  pack.bat
include/: AEPWrap.hpp  Board2D.hpp  CheckInput.h  Game.hpp  Persistence.hpp  Settings.hpp  Trace.hpp  TraceFlag.hpp  TraceManager.hpp  abmove.h  config.h  config.h.in
src/: AEPWrap.cpp  Board2D.cpp  CMakeLists.txt  CheckInput.c  Game.cpp  Persistence.cpp  Settings.cpp  Trace.cpp  TraceManager.cpp
